cha-pre-live-flux2/cha-eks-5a/namespaces/enalog-integration/network-policy-apps.yaml


####################################################
## Allow ingress from enalog-integration and icis-ingress ##

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-ingress-enalog-integration
  namespace: enalog-integration
spec:
  podSelector: {}
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: enalog-integration
    - namespaceSelector:
        matchLabels:
          name: icis-ingress

#################################
## Allow egress from enalog-integration ##

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-enalog-integration
  namespace: enalog-integration
spec:
  podSelector: {}
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          name: enalog-integration

#########################################
## Allow external http traffic egress  ##

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-http-external
  namespace: enalog-integration
spec:
  podSelector: {}
  egress:
  - ports:
    - port: 443
      protocol: TCP
    - port: 80
      protocol: TCP

#################################################
## Allow traffic to mongo db atlas peered vpc  ##

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-mongodb
  namespace: enalog-integration
spec:
  podSelector: {}
  egress:
  - to:
    - ipBlock:
        cidr: 192.168.248.0/21
    ports:
    - port: 27015
      protocol: TCP
    - port: 27016
      protocol: TCP
    - port: 27017
      protocol: TCP
    - port: 27015
      protocol: UDP
    - port: 27016
      protocol: UDP
    - port: 27017
      protocol: UDP
---

################
## ICIS monitoring ##

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-icis-monitoring
  namespace: enalog-integration
spec:
  podSelector: {}
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: prometheus
      namespaceSelector:
        matchLabels:
          name: icis-monitoring
